bzip2ida/c3/uncompress
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2395:18: error: expected expression
v36 = *( _OWORD *)&v30[v34 + 16]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2395:10: error: use of undeclared identifier '_OWORD'
v36 = *( _OWORD *)&v30[v34 + 16]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2396:12: error: expected expression
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2396:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2396:39: error: expected expression
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
                                      ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2396:31: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34] = *( _OWORD *)&v30[v34]; 
                              ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2397:12: error: expected expression
*( _OWORD *)&unused[v34 + 16] = v36; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2397:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 16] = v36; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2398:18: error: expected expression
v37 = *( _OWORD *)&v30[v34 + 48]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2398:10: error: use of undeclared identifier '_OWORD'
v37 = *( _OWORD *)&v30[v34 + 48]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2399:12: error: expected expression
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2399:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2399:44: error: expected expression
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2399:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 32] = *( _OWORD *)&v30[v34 + 32]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2400:12: error: expected expression
*( _OWORD *)&unused[v34 + 48] = v37; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2400:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 48] = v37; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2401:18: error: expected expression
v38 = *( _OWORD *)&v30[v34 + 80]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2401:10: error: use of undeclared identifier '_OWORD'
v38 = *( _OWORD *)&v30[v34 + 80]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2402:12: error: expected expression
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2402:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2402:44: error: expected expression
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2402:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 64] = *( _OWORD *)&v30[v34 + 64]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2403:12: error: expected expression
*( _OWORD *)&unused[v34 + 80] = v38; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2403:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 80] = v38; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2404:18: error: expected expression
v39 = *( _OWORD *)&v30[v34 + 112]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2404:10: error: use of undeclared identifier '_OWORD'
v39 = *( _OWORD *)&v30[v34 + 112]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2405:12: error: expected expression
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2405:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2405:44: error: expected expression
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2405:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 96] = *( _OWORD *)&v30[v34 + 96]; 
                                   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2406:12: error: expected expression
*( _OWORD *)&unused[v34 + 112] = v39; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2406:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v34 + 112] = v39; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2422:18: error: expected expression
v42 = *( _OWORD *)&v30[v40]; 
                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2422:10: error: use of undeclared identifier '_OWORD'
v42 = *( _OWORD *)&v30[v40]; 
         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2423:12: error: expected expression
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2423:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2423:74: error: expected expression
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
                                                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2423:66: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( ( char *)&stat_buf.__glibc_reserved[1] + v40) = *( _OWORD *)&v30[v40 - 16]; 
                                                                 ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2424:12: error: expected expression
*( _OWORD *)&unused[v40] = v42; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/bzip2.c:2424:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&unused[v40] = v42; 
   ^
40 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/uncompress/src/obj/bzip2.o] Error 1
